--- a/lang/default-translations.json
+++ b/lang/default-translations.json
@@ -11,6 +11,12 @@
   "CSV_UPLOAD_OLD_ROW": {
     "defaultMessage": "Koodi päivitetään"
   },
+  "CSV_UPLOAD_SUCCESS": {
+    "defaultMessage": "Tuonti onnistui"
+  },
+  "CSV_UPLOAD_SUCCESS_MESSAGE": {
+    "defaultMessage": "{koodistoUri} koodiston koodit tuotiin onnistuneesti."
+  },
   "KOODISTOPALVELU_OTSIKKO": {
     "defaultMessage": "Koodistopalvelu"
   },
@@ -47,14 +53,20 @@
   "LATAA_CSV_EI_DATAA": {
     "defaultMessage": "Valitse tiedosto."
   },
-  "LATAA_CSV_OTSIKKO": {
-    "defaultMessage": "Lataa koodisto csv-tiedostosta {koodistoUri}"
+  "LATAA_CSV_LATAA": {
+    "defaultMessage": "Lataa CSV"
+  },
+  "LATAA_CSV_LATAA_KUVAUS": {
+    "defaultMessage": "Lataa koodisto omalle koneelle"
   },
   "LATAA_CSV_PERUUTA": {
     "defaultMessage": "Peruuta"
   },
   "LATAA_CSV_TALLENNA": {
     "defaultMessage": "Tallenna"
+  },
+  "LATAA_CSV_TUO_KUVAUS": {
+    "defaultMessage": "Tuo koodi omalta koneelta"
   },
   "LATAA_CVS_VALITSE_TIEDOSTO": {
     "defaultMessage": "Valitse tiedosto"
