--- a/lang/default-translations.json
+++ b/lang/default-translations.json
@@ -51,7 +51,7 @@
     "defaultMessage": "Koodistoversio"
   },
   "LATAA_CSV_EI_DATAA": {
-    "defaultMessage": "Valitse tiedosto."
+    "defaultMessage": "Tai raahaa tiedosto tähän"
   },
   "LATAA_CSV_LATAA": {
     "defaultMessage": "Lataa CSV"
