--- a/lang/default-translations.json
+++ b/lang/default-translations.json
@@ -182,6 +182,15 @@
   "RYHMA_PAKOLLINEN": {
     "defaultMessage": "Valitse koodisto-ryhmä."
   },
+  "SUHDEMODAL_HEADER": {
+    "defaultMessage": "Valitse koodistot"
+  },
+  "SUHDEMODAL_LISAA": {
+    "defaultMessage": "Lisää valitut ({chosen})"
+  },
+  "SUHDEMODAL_SULJE": {
+    "defaultMessage": "Sulje"
+  },
   "SV_NIMI_PAKOLLINEN": {
     "defaultMessage": "Syötä ruotsinkielinen nimi"
   },
@@ -239,9 +248,6 @@
   "TAULUKKO_NIMI_PUUTTUU_KOODISTOLTA": {
     "defaultMessage": "Nimi puuttuu {koodistoUri}"
   },
-  "TAULUKKO_NOLLAA_SUODATTIMET": {
-    "defaultMessage": "Tyhjennä hakuehdot"
-  },
   "TAULUKKO_OTSIKKO": {
     "defaultMessage": "Koodistot ({filteredCount} / {totalCount})"
   },
@@ -263,8 +269,8 @@
   "TAULUKKO_SISALTYY_KOODISTOIHIN_OTSIKKO": {
     "defaultMessage": "Sisältyy koodistoihin ({count})"
   },
-  "TAULUKKO_VAKIO_FILTTERI": {
-    "defaultMessage": "Haetaan {count} koodistosta"
+  "TAULUKKO_VERSIO": {
+    "defaultMessage": "Versio"
   },
   "TAULUKKO_VERSIO_KUVAUS": {
     "defaultMessage": "Kuvaus"
