--- a/lang/default-translations.json
+++ b/lang/default-translations.json
@@ -101,6 +101,9 @@
   "KOODISTO_RYHMA_TYHJAT_TITLE": {
     "defaultMessage": "Tyhjät koodistoryhmät ({emptyRyhmaCount})"
   },
+  "KOODISTO_SUHDE_MODAL_HEADER": {
+    "defaultMessage": "Valitse koodistot"
+  },
   "KOODISTO_TALLENNUS_MESSAGE": {
     "defaultMessage": "Tallennettiin koodisto uri:lla {koodistoUri}"
   },
@@ -130,6 +133,9 @@
   },
   "KOODI_POISTA_TITLE": {
     "defaultMessage": "Poista koodi"
+  },
+  "KOODI_SUHDE_MODAL_HEADER": {
+    "defaultMessage": "Valitse koodistot"
   },
   "KOODI_TALLENNUS_MESSAGE": {
     "defaultMessage": "Tallennettiin koodi uri:lla {koodiUri}"
@@ -181,9 +187,6 @@
   },
   "RYHMA_PAKOLLINEN": {
     "defaultMessage": "Valitse koodisto-ryhmä."
-  },
-  "SUHDEMODAL_HEADER": {
-    "defaultMessage": "Valitse koodistot"
   },
   "SUHDEMODAL_LISAA": {
     "defaultMessage": "Lisää valitut ({chosen})"
